wp-content/plugins/wc-product-customer-list-premium/admin/assets/shortcode.css
#customer-bought .inside {
	margin-top: 8px;
}
.wpcl-shortcode#list-table {
	border-collapse: collapse;
    
}
.wpcl table thead th {
    padding: 5px 8px 8px;
    background-color: #f1f1f1;
    font-weight: 600;
}

.wpcl .dataTables_scrollBody {
    border-bottom: none;
}
.wpcl-shortcode#list-table tr {
    vertical-align: middle;
}
thead th strong {
    padding-right: 15px;
}

#postcustomstuff .dataTables_scrollHeadInner table {
    border: 0;
}
.wpcl tr:nth-child(even) {
	background-color:#f9f9f9;
}
.wpcl tr:nth-child(odd) {
	background-color:#fff;
}
.wpcl-shortcode#list-table tr, .wpcl-shortcode#list-table td {
	border: 1px solid #dfdfdf;
	text-align: left;
	padding: 0;
}
.wpcl-shortcode#list-table thead th, .wpcl .dataTables_wrapper.no-footer .dataTables_scrollBody, .wpcl table.dataTable thead th, .wpcl table.dataTable thead td {
	border-bottom: 0;
    border-top: 0;
    white-space: nowrap;
}

.wpcl-shortcode#list-table thead th {
    padding: 8px;
        border: 1px solid #dfdfdf;
}
.wpcl .wpcl-shortcode#list-table p {
	margin: 8px;
}
.wpcl .counter {
	background-color: #f1f1f1;
}
.wpcl .counter p {
	text-align: center;
	margin: 8px 0;
}
.wpcl .total {
	text-align: right;
	float: right;
	margin-top: 15px;
}

.wpcl #list-table_filter {
    margin-top: 5px;
}

.wpcl #list-table_filter input {
    padding: 0.2em;
    display: inline;
    width: auto;
}

.wpcl .dataTables_wrapper .dataTables_length select {
    width: auto;
    display: inline;
}
.wpcl .button, .wpcl a.dt-button {
    color: #555;
    border-color: #ccc;
    background: #f7f7f7;
    box-shadow: 0 1px 0 #ccc;
    vertical-align: top;
	
    display: inline-block;
    text-decoration: none;
    font-size: 13px;
    line-height: 26px;
    height: 28px;
    padding: 0 10px 1px;
    cursor: pointer;
    border-width: 1px;
    border-style: solid;
    -webkit-appearance: none;
    border-radius: 3px;
    white-space: nowrap;
    box-sizing: border-box;
    margin-bottom: 10px;
    margin-right: 5px;
}
.wpcl #list-table_wrapper a.dt-button span {
    font-size: 13px;
    line-height: 26px;
    text-transform: none;
}


.wpcl .button:hover, .wpcl #list-table_wrapper a.dt-button:hover {
    background: #fafafa;
    border-color: #ccc;
    color: #23282d;
    background-image: none;
    box-shadow: 0 1px 0 #ccc;
}

.wpcl .button:active, .wpcl #list-table_wrapper a.dt-button:active {
    background: #eee;
    border-color: #999;
    box-shadow: inset 0 2px 5px -3px rgba(0,0,0,.5);
    -webkit-transform: translateY(1px);
    transform: translateY(1px);
}

.wpcl .button {
    margin-top: 10px;
}
.wpcl .button.button-second {
	margin-right:3px;
}

/* Datatables */

.wpcl .dataTables_wrapper .dataTables_paginate .paginate_button {
    display: inline-block;
    min-width: 30px !important;
    border: 1px solid #d2d2d2 !important;
    padding: 3px 5px 7px !important;
    background: #e4e4e4 !important;
    font-size: 16px;
    line-height: 1;
    font-weight: 400;
    text-align: center;
    border-radius: 0;
    margin: 0.5em 0 0 0.2em;
}
.wpcl .dataTables_wrapper .dataTables_paginate .paginate_button:hover {
    border-color: #5b9dd9 !important;
    color: #fff !important;
    background: #00a0d2 !important;
    -webkit-box-shadow: none !important;
    box-shadow: none !important;
    outline: 0 !important;
}
.wpcl .dataTables_wrapper .dataTables_paginate .paginate_button.disabled, .wpcl .dataTables_wrapper .dataTables_paginate .paginate_button.disabled:hover {
    background-color: #ebebeb !important;
    color: #b4b4b4 !important;
    border: 0 !important;
}
.wpcl .dataTables_wrapper .dataTables_length, .wpcl .dataTables_wrapper .dataTables_filter {
    margin-bottom: 0.5em;
}
.wpcl .dataTables_empty {
	padding: 8px !important;
}

.wpcl table.dataTable tbody>tr.selected, .wpcl table.dataTable tbody>tr>.selected {
    background-color: #eee;
}

.wpcl .dataTables_wrapper .dataTables_length {
    margin-left: 10px;
}

